Revision history for Cache

0.06 in progress
 - replaced the cache_hash_ref instance property in MemoryCache with
   a class property and updated the SharedMemoryCache and 
   SizeAwareSharedMemoryCache modules accordingly
 - started version 0.06

0.05 2000-03-20-10-25
 - released version 0.05
 - updated Storable dependency to 1.011
 - replaced the IPC::Shareable backend with IPC::ShareLite
 - started version 0.05

0.04 2000-03-17-10-43
 - released version 0.04
 - replaced Data::Dumper with Storable, which is now a requirement
 - implemented the SizeAwareMemoryCache and associated tests
 - implemented the SizeAwareSharedMemoryCache and associated tests
 - added the SizeAwareCache interface
 - moved max_size logic from the _store method to the set method
 - started version 0.04

0.03 2000-03-10-12-40
 - released version 0.03
 - made the FileCache more multi-user friendly by allowing a more
   permissive default directory umask, which can also be optionally 
   overridden
 - updated documentation and code style
 - completely rewrote and improved the limit_size method for a major
   performance gain
 - updated the syntax for expiration times to include the [number] [unit] 
   format, e.g. "10 seconds"
 - added the get_object method to the Cache interface, which allows
   access to the underlying cache object (without potentially expiring
   the object)
 - added the get_namespace and get_default_expires_in methods to the
   Cache interface definition
 - updated the MANIFEST
 - checked in preliminary cache benchmarking code
 - fixed bug fixed bug #406030 -- default_expires_in never invoked
 - refactored common code into BaseCache
 - use Static_Params method
 - fixed default_expires_in bug
 - added coding guidelines to STYLE
 - started version 0.03

0.02 2000-02-15-21-12
 - released version 0.02
 - added perldoc to SizeAwareFileCache
 - created SizeAwareFileCache
 - added the SizeAwareCacheTester module
 - refactored common test code into the AbstractCacheTester module